add Exception in JoinEvent